[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/ui/paper.png" type="Texture" id=1]
[ext_resource path="res://Assets/ui/fonts/Spooky Cat Font by Dreamink-7NTypes.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/ui/theme.tres" type="Theme" id=3]
[ext_resource path="res://Nodes/PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://Nodes/VBoxContainer.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 2 )

[node name="PauseMenu" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 660.0
margin_top = 315.0
margin_right = 1260.0
margin_bottom = 765.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
margin_right = 600.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PAUSE"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
margin_top = 67.0
margin_right = 600.0
margin_bottom = 239.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer/HBoxContainer"]
margin_left = 218.0
margin_right = 382.0
margin_bottom = 172.0
script = ExtResource( 5 )

[node name="Resume" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 164.0
margin_bottom = 40.0
text = " RESUME GAME "

[node name="MainMenu" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 164.0
margin_bottom = 84.0
text = "MAIN MENU"

[node name="Restart" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 164.0
margin_bottom = 128.0
text = "RESTART"

[node name="Exit" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 164.0
margin_bottom = 172.0
text = "EXIT"
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
